[project]
name = "ltspice-mcp"
version = "0.1.0"
description = "MCP server for LTSpice circuit simulation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.0,<2.0",
    "spicelib>=1.4.9",
    "tomlkit>=0.14.0",
]

[project.scripts]
ltspice-mcp = "ltspice_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ltspice_mcp"]
